[package]
name = "dynv6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
encoding_rs = "0.8.32"
reqwest = { version = "0.11.18", features = ["blocking"] }
thiserror = "1.0.47"
