[package]
name = "tools-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["algorithm/gobang", "cloud-189", "common", "crawler", "ddns", "file-server"]

[workspace.dependencies]
common = { path = "./common" }
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.40", features = ["derive"] }
encoding_rs = "0.8.35"
hex = "0.4.3"
md5 = "0.8.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
rsa = { version = "0.9.8", features = ["pem"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
url = "2.5.4"

[dependencies]
