[package]
name = "cloud-189"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
md5 = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
