[package]
name = "dynv6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
encoding_rs = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
